<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeSettingsActivity">

    <Button
        android:id="@+id/btn_reset_settings"
        android:layout_width="95dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:onClick="resetSettings"
        android:text="@string/resetSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_save_settings2"
        android:layout_width="93dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="saveSettings"
        android:text="@string/saveSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#C9009688"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/ChangeSettingsMain"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_main_menu"
        android:layout_width="96dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_arrow_back_black_24dp"
        android:onClick="returnToMain"
        android:text="@string/btn_main_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:background="#C9009688"
        android:text="@string/gameLengthTitle"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/btn_main_menu"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:background="#C9009688"
        android:text="@string/boardSizeTitle"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_game_length"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:background="#C9009688"
        android:text="@string/LetterWeightTitle"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/spinner_board_size"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="46dp"
        android:layout_height="24dp"
        android:layout_gravity="bottom|left"
        android:layout_marginStart="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/lengthMin"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/seekbar_game_length"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekbar_game_length"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="47dp"
        android:layout_height="25dp"
        android:layout_gravity="bottom|right"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/lengthMax"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/seekbar_game_length"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekbar_game_length"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="RtlHardcoded" />

    <SeekBar
        android:id="@+id/seekbar_game_length"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="275dp"
        android:layout_height="32dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="4dp"
        android:indeterminate="false"
        android:max="4"
        android:progress="0"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/text_game_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/seekbar_game_length"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="1 minute" />

    <Spinner
        android:id="@+id/spinner_board_size"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/seekbar_game_length"
        app:layout_constraintStart_toStartOf="@+id/seekbar_game_length"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/text_vowel_weight_entry"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_save_vowel_weight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/spinner_vowel_entry"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/text_consonant_weight_entry"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/text_vowel_weight_entry"
        app:layout_constraintStart_toStartOf="@+id/text_vowel_weight_entry"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Spinner
        android:id="@+id/spinner_vowel_entry"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/spinner_board_size"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/spinner_consonant_entry"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/spinner_vowel_entry"
        app:layout_constraintStart_toStartOf="@+id/spinner_vowel_entry"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/btn_save_vowel_weight"
        android:layout_width="45dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_add_black_24dp"
        android:gravity="center|center_horizontal"
        android:onClick="addVowelWeight"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/spinner_board_size"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_save_vowel_weight2"
        android:layout_width="45dp"
        android:layout_height="39dp"
        android:drawableStart="@drawable/ic_add_black_24dp"
        android:gravity="center|center_horizontal"
        android:onClick="addConsonantWeight"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_consonant_weight_entry"
        app:layout_constraintEnd_toEndOf="@+id/btn_save_vowel_weight"
        app:layout_constraintTop_toTopOf="@+id/text_consonant_weight_entry" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/individualConsonants"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/spinner_vowel_entry"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/spinner_vowel_entry"
        app:layout_constraintTop_toBottomOf="@+id/spinner_consonant_entry" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/individualWeights"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/text_vowel_weight_entry"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="@+id/text_vowel_weight_entry"
        app:layout_constraintTop_toBottomOf="@+id/text_consonant_weight_entry" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/individualWeights"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/text_vowel_weight_entry"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="@+id/text_vowel_weight_entry"
        app:layout_constraintTop_toBottomOf="@+id/text_vowel_weight_entry" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/individualVowels"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/spinner_vowel_entry"
        app:layout_constraintStart_toStartOf="@+id/spinner_vowel_entry"
        app:layout_constraintTop_toBottomOf="@+id/spinner_vowel_entry" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/weightWarning"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/btn_save_vowel_weight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner_vowel_entry"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weightWarning2"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/btn_save_vowel_weight"
        app:layout_constraintStart_toStartOf="@+id/spinner_vowel_entry"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


</androidx.constraintlayout.widget.ConstraintLayout>