<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_play_game_header"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#C9009688"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/PlayGameMain"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_reroll_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="rerollBoard"
        android:text="@string/btn_reroll_board"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_play_game_header" />

    <Button
        android:id="@+id/btn_quit_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:onClick="quitGame"
        android:text="@string/btn_quit_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_play_game_header" />

    <TextView
        android:id="@+id/text_time_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeLeft"
        app:layout_constraintEnd_toEndOf="@+id/text_countdown_timer"
        app:layout_constraintStart_toStartOf="@+id/text_countdown_timer"
        app:layout_constraintTop_toBottomOf="@+id/text_countdown_timer" />

    <TextView
        android:id="@+id/text_countdown_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="1:00"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_quit_game"
        app:layout_constraintStart_toEndOf="@+id/btn_reroll_board"
        app:layout_constraintTop_toBottomOf="@+id/text_play_game_header" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/scrollbar"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_time_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textCurrentWord"
        android:layout_weight="1">
    <TableLayout
        android:id="@+id/board_tbl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:shrinkColumns="*"
        android:stretchColumns="*"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_time_left"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toTopOf="@id/textCurrentWord"></TableLayout>
    </ScrollView>
    <TextView
        android:id="@+id/textCurrentWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current Word"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textCurrentWordSelection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textCurrentWordSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_clear_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_add_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="addWord"
        android:text="@string/btn_add_word"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textCurrentWord"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_clear_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="clearWord"
        android:text="@string/btn_clear_word"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textCurrentWord" />


</androidx.constraintlayout.widget.ConstraintLayout>
